--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 welcome.message=Spring !!!!
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:file:C:/kgu/data
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=123
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+logging.level.org.springframework.data=INFO
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
